ir/tests/snapshots/snapshot_tests__grammar_debug_simple.snap
---
source: ir/tests/snapshot_tests.rs
expression: grammar
---
Grammar {
    name: "debug_simple",
    rules: {
        SymbolId(
            3,
        ): [
            Rule {
                lhs: SymbolId(
                    3,
                ),
                rhs: [
                    NonTerminal(
                        SymbolId(
                            3,
                        ),
                    ),
                    Terminal(
                        SymbolId(
                            2,
                        ),
                    ),
                    NonTerminal(
                        SymbolId(
                            3,
                        ),
                    ),
                ],
                precedence: None,
                associativity: None,
                fields: [],
                production_id: ProductionId(
                    0,
                ),
            },
            Rule {
                lhs: SymbolId(
                    3,
                ),
                rhs: [
                    Terminal(
                        SymbolId(
                            1,
                        ),
                    ),
                ],
                precedence: None,
                associativity: None,
                fields: [],
                production_id: ProductionId(
                    1,
                ),
            },
        ],
    },
    tokens: {
        SymbolId(
            1,
        ): Token {
            name: "NUMBER",
            pattern: Regex(
                "\\d+",
            ),
            fragile: false,
        },
        SymbolId(
            2,
        ): Token {
            name: "+",
            pattern: String(
                "+",
            ),
            fragile: false,
        },
    },
    precedences: [],
    conflicts: [],
    externals: [],
    extras: [],
    fields: {},
    supertypes: [],
    inline_rules: [],
    alias_sequences: {},
    production_ids: {},
    max_alias_sequence_length: 0,
    rule_names: {
        SymbolId(
            3,
        ): "expr",
    },
    symbol_registry: None,
    word_token: None,
    lexical_metadata: {},
}
